welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:33: error: not found: value FaireFleur
  FaireFleur(cCote)
  ^