welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def growFlowers() {
  
  faireDemi()
  
}

def faireFleur(c:Color) {
  setCouleurBrosse(c)
  baisseBrosse()
  avance(2)
  recule()
  gauche()
  avance()
  recule(2)
  avance()
  setCouleurBrosse(Color.YELLOW)
  droite()
  leveBrosse()  
}

def faireFleurDuo(c1:Color,c2:Color) {
  faireFleur(c1)
  avance(3)
  faireFleur(c2)
  recule(5)
}

def faireFleurTrio(cCote:Color,cCentre:Color) {
  faireFleur(cCote)
  avance(3)
  faireFleur(cCentre)
  avance(3)
  FaireFleur(cCote)
  recule(3)
}

def faireDemi() {
  
  faireFleurDuo(Color.RED,Color.CYAN)
  droite()
  avance(4)
  gauche()
  faireFleurDuo(Color.PINK,Color.GREEN)
  droite()
  avance(2)
  gauche()
  faireFleurTrio(Color.ORANGE,Color.BLUE)
  droite()
  avance(2)
  droite()
  faireFleurDuo(Color.RED,Color.CYAN)
  droite()
  avance(4)
  gauche()
  faireFleurDuo(Color.PINK,Color.GREEN)
}